# marketing-hack-misis-anime

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  arch.drawio  docker-compose.yaml  download_data.sh  pyproject.toml
analytics/: README.md  pyproject.toml
analytics/notebooks/: example.ipynb
analytics/src/evraz_anime_analytics/: helper.py  predict.py  preprocessing.py
backend/: DockerfileKafka  DockerfileWeb  docker-compose.yaml  init.sh  kafka_start.sh  pyproject.toml
backend/app/: concat_df.py  db_init.py  dump_from_db.py  example.py  kafka_entrypoint.py  kafka_entrypoint_store_localy.py
backend/app/data/: train.pqt
backend/app/data/final_model/: configuration.json  constraints.p  entity_to_idx.p  epoch_losses.csv  eval_report.json  relation_to_idx.p  report.json
backend/app/persistence/: db_models.py
backend/app/presentation/: schemas.py
backend/app/presentation/kafka/: main.py
backend/app/presentation/web/: router.py
backend/app/repository/: mongo_repository.py  pg_repository.py
backend/app/schemas/: base.py  event.py  exhauster.py  prediction.py  product.py  salepoint.py  status.py
backend/app/service/: app_service.py  exhauster_service.py  mapping_service.py  prediction_service.py  product_service.py  stream_service.py
backend/app/shared/: containers.py  settings.py
backend/app/tests/: debug_test.py  e2e_test.py  main.ipynb  record.py
backend/extra/: grafana.json  init.sql  mongo-init.js  mongo-mock.js  mongo-set-dates.js  prepare_dataset.py  test.ipynb
backend/loadtests/: locust.conf  locustfile.py
(+45 files in other folders)
