[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["pibragimov <pibragimov@whoosh.bike>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
orjson = "^3.8.6"
sqlalchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
pyhumps = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
